--- a/styles/recomendadoStyles.css
+++ b/styles/recomendadoStyles.css
@@ -9,6 +9,12 @@
         .container{
             display: grid;
             grid-template-columns: repeat(4, 1fr);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100vh;
+          
         }
 
         .content {
@@ -27,6 +33,7 @@
             box-shadow: 0px 2px 23px #000000;
             width: 300px;
             padding: 5px;
+            margin: 10px;
         }
 
         .mediaCard img {
